# iniparser

./: CMakeLists.txt
include/: INI.h
src/: INI.cpp  mainINI.cpp
testFile/: INITest.conf  test.ini
